[package]
name = "simu"
version = "0.1.0"
authors = ["Arthur Bit-Monnot <abitmonnot@laas.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.18"
ncollide2d = "0.20"
nphysics2d = "0.12"
crossbeam = "0.7"
ggez = "0.5"
libloading = "0.5"